inference/llm-d/inference-pool.yaml
---
# Source: inferencepool/templates/epp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-d-infpool-epp
  labels:
    app.kubernetes.io/name: llm-d-infpool-epp
    app.kubernetes.io/version: "v1.3.0"
spec:
  selector:
    inferencepool: llm-d-infpool-epp
  ports:
    - name: grpc-ext-proc
      protocol: TCP
      port: 9002
    - name: http-metrics
      protocol: TCP
      port: 9090
  type: ClusterIP
---
# Source: inferencepool/templates/epp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-d-infpool-epp
  labels:
    app.kubernetes.io/name: llm-d-infpool-epp
    app.kubernetes.io/version: "v1.3.0"
spec:
  replicas: 1
  strategy:
    # The current recommended EPP deployment pattern is to have a single active replica. This ensures
    # optimal performance of the stateful operations such prefix cache aware scorer.
    # The Recreate strategy the old replica is killed immediately, and allow the new replica(s) to
    # quickly take over. This is particularly important in the high availability set up with leader
    # election, as the rolling update strategy would prevent the old leader being killed because
    # otherwise the maxUnavailable would be 100%.
    type: Recreate
  selector:
    matchLabels:
      inferencepool: llm-d-infpool-epp
  template:
    metadata:
      labels:
        inferencepool: llm-d-infpool-epp
    spec:
      serviceAccountName: llm-d-infpool-epp
      # Conservatively, this timeout should mirror the longest grace period of the pods within the pool
      terminationGracePeriodSeconds: 130
      containers:
      - name: epp
        image: ghcr.io/llm-d/llm-d-inference-scheduler:v0.4.0
        imagePullPolicy: Always
        args:
        - --pool-name
        - llm-d-infpool
        # The pool namespace is optional because EPP can default to the NAMESPACE env var.
        # We still keep this here so that the template works with older versions of EPP, or other
        # distros of EPP which may not have implemented the NAMESPACE env var defaulting behavior.
        - --pool-namespace
        - default
        - --pool-group
        - "inference.networking.k8s.io"
        - --zap-encoder
        - "json"
        - --config-file
        - "/config/custom-plugins.yaml"
        # Pass additional flags via the inferenceExtension.flags field in values.yaml.
        - --kv-cache-usage-percentage-metric
        - "vllm:kv_cache_usage_perc"
        - --v
        - "1"
        - --tracing=false
        ports:
        - name: grpc
          containerPort: 9002
        - name: grpc-health
          containerPort: 9003
        - name: metrics
          containerPort: 9090
        livenessProbe:
          grpc:
            port: 9003
            service: inference-extension
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          grpc:
            port: 9003
            service: inference-extension
          periodSeconds: 2
        volumeMounts:
        - name: plugins-config-volume
          mountPath: "/config"

      volumes:
      - name: plugins-config-volume
        configMap:
          name: llm-d-infpool-epp
---
# Source: inferencepool/templates/epp-config.yaml
---
